fixed issue with alignement in `th` elements

--- a/packages/components/app/styles/components/table.scss
+++ b/packages/components/app/styles/components/table.scss
@@ -73,10 +73,22 @@ $hds-table-cell-padding-tall: 22px 16px 21px 16px; // the 1px difference is to a
       }
     }
 
-    // horizontal alignment (contrary to the tbody, it's applied overriding some  of the "flexed" elements properties)
+    // horizontal alignment
 
-    .hds-table__th--align-right {
-     .hds-table__th-content {
+    .hds-table__th--align-center,
+    .hds-table__td--align-center {
+      text-align: center;
+
+      .hds-table__th-content {
+        justify-content: center;
+      }
+    }
+
+    .hds-table__th--align-right,
+    .hds-table__td--align-right {
+      text-align: right;
+
+      .hds-table__th-content {
         justify-content: flex-end;
       }
     }
@@ -211,17 +223,24 @@ $hds-table-cell-padding-tall: 22px 16px 21px 16px; // the 1px difference is to a
 
   }
 
-  // horizontal alignment (applied at cell level)
-
-  .hds-table__th--align-right,
-  .hds-table__td--align-right {
-    text-align: right;
-  }
-
+  // horizontal alignment
 
   .hds-table__th--align-center,
   .hds-table__td--align-center {
     text-align: center;
+
+    .hds-table__th-content {
+      justify-content: center;
+    }
+  }
+
+  .hds-table__th--align-right,
+  .hds-table__td--align-right {
+    text-align: right;
+
+    .hds-table__th-content {
+      justify-content: flex-end;
+    }
   }
 
   // vertical alignment (applied at table level)
